--- a/language/en-GB/en-GB.mod_edgeanimate.ini
+++ b/language/en-GB/en-GB.mod_edgeanimate.ini
@@ -9,7 +9,7 @@ MOD_EDGEANIMATE_FIELD_CSS_STYLE_SHEET_LABEL="Choose CSS file"
 MOD_EDGEANIMATE_FIELD_CSS_STYLE_SHEET_DESC="Choose CSS file"
 MOD_EDGEANIMATE_FIELD_JS_FILE_LABEL="Choose JS file"
 MOD_EDGEANIMATE_FIELD_JS_FILE_DESC="Choose JS file"
-MOD_EDGEANIMATE_FIELD_PREPARE_CONTENT_DESC="Activer/Désactiver la prise en charge des plug-ins de contenu."
+MOD_EDGEANIMATE_FIELD_PREPARE_CONTENT_DESC="Optionally prepare the content with the Joomla Content Plug-ins."
 MOD_EDGEANIMATE_FIELD_PREPARE_CONTENT_LABEL="Plug-ins de contenu"
 MOD_EDGEANIMATE_FIELD_JS2_FILE_LABEL="Choose another JS file"
 MOD_EDGEANIMATE_FIELD_JS2_FILE_DESC="Choose another JS file"
