--- a/language/fr-FR/fr-FR.mod_edgeanimate.sys.ini
+++ b/language/fr-FR/fr-FR.mod_edgeanimate.sys.ini
@@ -5,6 +5,6 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_EDGEANIMATE="Edgeanimate"
-EDGEANIMATE_DESC="Le module mod_edgeanimate est un module multi-fonctions permettant d'installer des scripts Mootools et leurs CSS associées en sélectionnant finement leur emplacement.<br />Usage :<br />Choisir une position. Le plus simple est de créer une position edgeanimate.<br />Publier partout.<br /><br /><br />Enfin, dans l'article, insérer {loadposition edgeanimate} .<br /><br /> Choix des CSS <br />Il est possible de choisir le look de l'interface en sélectionnant un fichier CSS dans Options de base."
+EDGEANIMATE_DESC="Module mod_edgeanimate."
 MOD_EDGEANIMATE_LAYOUT_DEFAULT="Défaut"
 
