--- a/language/fr-FR/fr-FR.mod_edgeanimate.ini
+++ b/language/fr-FR/fr-FR.mod_edgeanimate.ini
@@ -15,4 +15,4 @@ MOD_EDGEANIMATE_FIELD_JS2_FILE_LABEL="Deuxième choix de fichier JS"
 MOD_EDGEANIMATE_FIELD_JS2_FILE_DESC="Deuxième choix de fichier JS"
 MOD_EDGEANIMATE_FIELD_EDGEANIMATENUMBER_LABEL="Numéro Edge Animate"
 MOD_EDGEANIMATE_FIELD_EDGEANIMATENUMBER_DESC="Numéro Edge Animate"
-EDGEANIMATE_DESC="Le module mod_edgeanimate est un module multi-fonctions permettant d'installer des scripts JavaScripts (mootools ou Jquery dépendants) et leurs CSS associées en sélectionnant finement leur emplacement.<br />Usage :<br />Choisir une position. Le plus simple est de créer une position edgeanimate.<br />Publier partout.<br /><br /><br />Enfin, dans l'article, insérer {loadposition edgeanimate} .<br /><br /> Choix des CSS <br />Il est possible de choisir le look de l'interface en sélectionnant un fichier CSS dans Options de base."
+EDGEANIMATE_DESC="Module edgeanimate."
